--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "typings": "dist/stardust-allofw.d.ts",
   "scripts": {
     "build": "tsc -p .",
-    "prepublish": "npm run build",
+    "prepublish": "yarn run build",
     "watch": "tsc -w -p ."
   },
   "dependencies": {
